added timer element

--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
       <h1>Welcome to Code Quiz</h1>
       <h3>Click Start to begin quiz. You will be asked a series of questions, please choose one answer. Try to be quick, this is a timed quiz. Don't forget to log your initials with your results!</h3>
     </div>
+    <div id="timer" class="timer"></div>
     <div class="controls">
-        <button id="start-btn" class="start-btn btn">Start</button>
+        <button onclick="startTimer();" id="start-btn" class="start-btn btn">Start</button>
         <button id="next-btn" class="next-btn btn hide">Next</button>
     </div>
   </div>
