--- a/index.html
+++ b/index.html
@@ -1,34 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" type="text/css" href="reset.css"> 
-  <link rel="stylesheet" type="text/css" href="style.css">
-  <script defer src="script.js"></script>
-  <title>Code Quiz Challenge</title>
-</head>
-<body>
-  <div class="container">
-    <div id="question-container" class="hide">
-      <div id="question">Question</div>
-      <div id="answer-buttons" class="btn-grid">
-        <button class="btn">Answer 1</button>
-        <button class="btn">Answer 2</button>
-        <button class="btn">Answer 3</button>
-        <button class="btn">Answer 4</button>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Code Quiz Challenge</title>
+    <link rel="stylesheet" href="style.css">
+  </head>
+  <body>
+    <div class="container">
+      <div id="home" class="flex-center flex-column">
+        <h1>Code Quiz Challenge</h1>
+        <p>Click start to begin. Please choose one answer but be quick this is a timed quiz. Good luck!</p>
+        <a class="btn" href="game.html">Start</a>
+        <a class="btn" href="highscores.html">High Scores</a>
       </div>
     </div>
-    <div id="intro" class="intro">
-      <h1>Welcome to Code Quiz</h1>
-      <h3>Click Start to begin quiz. You will be asked a series of questions, please choose one answer. Try to be quick, this is a timed quiz. Don't forget to log your initials with your results!</h3>
-    </div>
-    <div id="timer" class="timer"></div>
-    <div class="controls">
-        <button onclick="startTimer();" id="start-btn" class="start-btn btn">Start</button>
-        <button id="next-btn" class="next-btn btn hide">Next</button>
-    </div>
-  </div>
-</body>
+  </body>
 </html>
